--- a/rabbitmq/templates/statefulset.yaml
+++ b/rabbitmq/templates/statefulset.yaml
@@ -1,43 +1,39 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mysql
+  name: rabbitmq
   namespace: roboshop
   labels:
-    app: mysql
+    app: rabbitmq
     project: roboshop
     tier: db
 spec:
   selector:
     matchLabels:
-      app: mysql
+      app: rabbitmq
       project: roboshop
       tier: db
-  # spec:
-  serviceName: "mysql"
-  replicas: {{ .Values.statefulset.replicas }} # by default is 1
-  # minReadySeconds: 10 # by default is 0
+  serviceName: "rabbitmq"
+  replicas: {{ .Values.statefulset.replicas }}
   template:
     metadata:
       labels:
-        app: mysql
+        app: rabbitmq
         project: roboshop
         tier: db
     spec:
       containers:
-      - name: mysql
-        image: "pkainnet/mysql:{{ .Values.statefulset.imageVersion }}"
+      - name: rabbitmq
+        image: rabbitmq
         envFrom:
-        - configMapRef:
-            name: mysql
         - secretRef:
-            name: mysql
+            name: rabbitmq
         volumeMounts:
-        - name: mysql
-          mountPath: /var/lib/mysql
+        - name: rabbitmq
+          mountPath: /var/lib/rabbitmq
   volumeClaimTemplates:
   - metadata:
-      name: mysql
+      name: rabbitmq
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: "ebs-sc"
