--- a/mysql/templates/statefulset.yaml
+++ b/mysql/templates/statefulset.yaml
@@ -27,6 +27,8 @@ spec:
       containers:
       - name: mysql
         image: "pkainnet/mysql:{{ .Values.statefulset.imageVersion }}"
+        args:
+        - "--ignore-db-dir=lost+found"
         envFrom:
         - configMapRef:
             name: mysql
