--- a/admin/roboshop.yaml
+++ b/admin/roboshop.yaml
@@ -15,7 +15,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: roboshop-pod-reader
-  namespace: defaulroboshopt
+  namespace: roboshop
 subjects:
 # You can specify more than one "subject"
 - kind: User
